Edited add character route
